2006-10-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSImageView.m: Fix error in initial drag position.

2006-10-11 Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile (GNUSTEP_INSTALLATION_DOMAIN):
	Use GNUSTEP_INSTALLATION_DOMAIN
	instead of GNUSTEP_INSTALLATION_DIR.

2006-10-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/GuiAdditions.gsdoc:
	* Documentation/Gui.gsdoc:
	* Documentation/GuiUser/KeyboardSetup.gsdoc:
	* Documentation/GuiUser/LanguageSetup.gsdoc:
	* Documentation/GuiUser/DefaultsSummary.gsdoc:
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/General/OpenStepCompliance.gsdoc:
	Update dtd version

2006-10-08 23:47-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Images/GNUmakefile: Copy GSStop.tiff and GSSearch.tiff to the
	installation directory.  They were previously missing.

2006-10-07 10:20-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Implement init in NSIBHelpConnector.

2006-10-07 10:13-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Implement establishConnection in 
	NSIBHelpConnector.

2006-10-07 10:02-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h: Declaration
	for NSIBHelpConnector ivars and methods.
	* Source/GSNibCompatibility.m: Implemented NSIBHelpConnector.
	* Source/NSBundleAdditions.m: Added check to initWithCoder so that
	values aren't decoded, if there's no value in the coder.

2006-10-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTrackingRect.m: Allow reset rect to another value.
	* Source/GSToolTips.m: Improve handling of tips in rects other than
	the main one.

2006-10-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSToolTips.h: Remove some ivars
	* Source/GSToolTips.m: Move ivars to be static variables for common
	use by all tool tips.  Cancel an in-progress tooltip when a new one
	starts.
